# sugar-artwork

./: .gitignore  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  autogen.sh  build-snapshot.sh  configure  configure.ac  configure.in  gtkrc2-default  maint-helper.py  setup-user-theme.py
art/: Makefile.am
art/cursor/: Makefile.am
art/cursor/Bluecurve/: Bluecurve.cursortheme  ChangeLog  Makefile.am
art/cursor/cursorthemegen/: ChangeLog  main.c  themefile.c
art/cursor/olpc/: Makefile.am  olpc.cursortheme
art/icon-theme/: Makefile.am  import-icon  index.theme.in
art/icon-theme/16x16/: Makefile.am
art/icon-theme/16x16/stock/emoticons/: Makefile.am
art/icon-theme/24x24/: Makefile.am
art/icon-theme/32x32/: Makefile.am
art/icon-theme/48x48/: Makefile.am
art/icon-theme/scalable/: Makefile.am
art/icon-theme/scalable/actions/: Makefile.am
art/icon-theme/scalable/activities/: Makefile.am
art/icon-theme/scalable/control/: Makefile.am
art/icon-theme/scalable/device/: Makefile.am
art/icon-theme/scalable/object/: Makefile.am
art/icon-theme/scalable/stock/: Makefile.am
cursor/: Makefile.am  Makefile.in
cursor/cursorthemegen/: Makefile.am  Makefile.in  README  cursortheme.h  main.c  sample.cursortheme
cursor/sugar/: .gitignore  Makefile.am  Makefile.in  based_arrow_right.in  based_arrow_up.in  bottom_left_corner.in  bottom_right_corner.in  busy.in  center_ptr.in  circle.in  color-picker.in  eraser.in  fleur.in  hand1.in  hand_closed.in  left_ptr.in  left_ptr_modify.in  minus.in  olpc.cursortheme  paint-bucket.in  paintbrush.in  question_arrow.in  right_ptr.in  right_side.in  sb_h_double_arrow.in  sb_left_arrow.in  sb_right_arrow.in  sb_v_double_arrow.in  sugar-cursortheme  sugar.cursortheme  top_side.in
cursor/sugar-lh/: Makefile.am  based_arrow_down.in  based_arrow_left.in  close.in  crosshair.in  exchange.in  forbidden.in  hand2.in  hand_open.in  left_ptr_watch.in  link.in  pencil.in  plus.in  sb_down_arrow.in  sb_up_arrow.in  xterm.in
debian/: README.packaging  changelog  control  control.in  control.in.in  copyright  copyright_hints  rules  watch
debian/patches/: 0001_upstream_git_until_77e91c3.patch  0001_upstream_git_until_a4b7d70.patch  020150701~00ebb38.patch  020150702~1cd50f1.patch  1001_cursorfiles_noexec.patch  1002_skip_none-arow_only_if_supported.patch  2001_empy_from_system.patch  2991_cursorfiles_noexec.patch  2991_empy_from_system_automade.patch  2991_upstream_git_until_77e91c3.patch  2992_fix_upstream_git.patch  series  sugar-style-h-prototypes.patch
gtk/: Makefile.am  Makefile.in
gtk-engine/: Makefile.am
gtk-engine/src/: Makefile.am  cairo-support.h  olpc-rc-style.c  olpc-rc-style.h  olpc-style.c  olpc-style.h  olpc.c  olpc.h  olpc_main.c  olpc_misc.c  olpc_rc_style.c  olpc_rc_style.h  olpc_style.h  olpc_theme_draw.c
gtk-engine/theme/: Makefile.am  gtkrc
gtk/engine/: Makefile.am  Makefile.in  cairo-support.c  general-support.h  olpc_misc.h  olpc_rc_style.c  olpc_theme_draw.c  sugar-drawing.c  sugar-drawing.h  sugar-info.c  sugar-info.h  sugar-rc-style.c  sugar-rc-style.h  sugar-style.c  sugar-style.h  sugar-utils.c  sugar-utils.h  sugar.c  widget-information.c  widget-information.h
gtk/theme/: Makefile.am  Makefile.in  gtkrc  gtkrc.em
gtk/theme/sugar/: gtkrc
gtk/theme/sugar-xo/: Makefile.am
gtk3/: Makefile.am  Makefile.in
gtk3/engine/: Makefile.am  engine.symbols  sugar_engine.c  sugar_utils.c  sugar_utils.h
gtk3/theme/: Makefile.am  Makefile.in  em.py  gtk-dark.css  gtk-keys.css  gtk-widgets-assets-dark.css  gtk-widgets.css  gtk-widgets.css.em  gtk.css  settings.ini  settings.ini.em
gtk3/theme/3.20/: Makefile.am  Makefile.in  gtk-widgets.css.em
gtk3/theme/assets/: Makefile.am  Makefile.in
gtk3/theme/assets/100/: Makefile.am  Makefile.in
gtk3/theme/assets/72/: Makefile.am  Makefile.in
icons/: Makefile.am  Makefile.in  import-icon  index.theme  index.theme.in
icons/16x16/stock/emoticons/: Makefile.am
icons/scalable/: Makefile.am  Makefile.in
icons/scalable/actions/: Makefile.am  Makefile.in
icons/scalable/apps/: Makefile.am  Makefile.in
icons/scalable/categories/: Makefile.am  Makefile.in
icons/scalable/control/: Makefile.am  Makefile.in
icons/scalable/device/: Makefile.am  Makefile.in  battery-000.icon  battery-030.icon  network-wireless-connected-080.icon
icons/scalable/emblems/: Makefile.am  Makefile.in  module-for-parents.py
icons/scalable/mimetypes/: Makefile.am  Makefile.in
icons/scalable/object/: Makefile.am
icons/scalable/status/: Makefile.am  Makefile.in
icons/scalable/stock/: Makefile.am
matchbox/: Makefile.am  Makefile.in  theme.xml
test/: Makefile.am  exported  gtk-engine-test.py  torture  torturetest.c  valgrind-suppressions
test/gtkrcs/: buildin  sugar
