AC_INIT(art)

AM_CONFIG_HEADER(config.h)

AM_INIT_AUTOMAKE(olpc-artwork, 0.10)

# Honor aclocal flags
ACLOCAL="$ACLOCAL $ACLOCAL_FLAGS"

AM_MAINTAINER_MODE

AM_DISABLE_STATIC
	
AC_PROG_CC
AC_HEADER_STDC
AC_PROG_LIBTOOL
AC_PROG_INTLTOOL

PKG_CHECK_MODULES(GTK2, gtk+-2.0 >= 2.0.0,,
	          AC_MSG_ERROR([GTK+-2.0 is required to compile redhat-artwork]))

GDK_PIXBUF2_CFLAGS=`$PKG_CONFIG --cflags gdk-pixbuf-2.0`
GDK_PIXBUF2_LIBS=`$PKG_CONFIG --libs gdk-pixbuf-2.0`
AC_SUBST(GDK_PIXBUF2_CFLAGS)
AC_SUBST(GDK_PIXBUF2_LIBS)

PKG_CHECK_MODULES(ENGINE, gtk+-2.0 >= 2.0 gobject-2.0 >= 2.0 cairo >= 0.1.1)

dnl ===========================================================================
dnl Use lots of warning flags with GCC

WARN_CFLAGS=""
if test "x$GCC" = "xyes"; then
	WARN_CFLAGS="-Wall -Wpointer-arith -Wstrict-prototypes \
	-Wmissing-prototypes -Wmissing-declarations \
	-Wnested-externs -fno-strict-aliasing"
fi
AC_SUBST(WARN_CFLAGS)
dnl ===========================================================================

AM_GLIB_GNU_GETTEXT
	
AC_OUTPUT([
Makefile
art/Makefile
art/cursor/Makefile
art/cursor/cursorthemegen/Makefile
art/cursor/Bluecurve/Makefile
art/icon-theme/Makefile
art/icon-theme/24x24/Makefile
art/icon-theme/32x32/Makefile
art/icon-theme/48x48/Makefile
gtk-engine/Makefile
gtk-engine/src/Makefile
gtk-engine/theme/Makefile
po/Makefile.in
])
